@@ -1,6 +1,43 @@
 #!/usr/bin/env python
+#
+# Copyright (C) 2007 Lemur Consulting Ltd
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License along
+# with this program; if not, write to the Free Software Foundation, Inc.,
+# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+r"""perftest.py: Perform automated performance tests.
 
-"""Run performance tests.
+This script performs automated performance tests of the Xappy module.
+
+First, it downloads sample data to use for the performance tests, if such data
+isn't already downloaded.
+
+Next, it performs some timed indexing runs, producing CSV log files and graphs
+of the performance of these runs.
+
+Next, it performs some timed search runs, producing CSV log files and graphs
+of the performance of these runs.
+
+
+FIXME - needs to have support for clearing the cache between runs (but also do
+some hot-cache runs):
+
+To clear the cache:
+ 1. If /proc/sys/vm/drop_caches exists, and is writable, writing "1" to it
+    clears the cache.
+ 2. Otherwise, creates a large file containing random data, read all the
+    data from it, and then delete it.
+
 
 """
 
@@ -9,14 +46,13 @@ import os
 import os.path
 import shutil
 import sys
-import subprocess
 import time
 import urllib
 import setuppaths
 
 import indexer
 import analyse_indexlogs
-#import searcher
+import searcher
 import analyse_searchlogs
 
 
@@ -86,10 +122,10 @@ def do_index(config, testrun):
 
 def do_search(config, testrun):
     dbpath = testrun.dbpath(config)
+    # FIXME - clear cache before first run
     for runnum in range(1, config.searchruns + 1):
         for queryfile, concurrency, extraargs in testrun.queryruns:
             searchlogfile = testrun.searchlogpath(config, queryfile, concurrency, extraargs, runnum)
-            serverlogfile = testrun.serverlogpath(config, queryfile, concurrency, extraargs, runnum)
             searchdumpdir = testrun.searchdumpdir(config, queryfile, concurrency, extraargs, runnum)
 
             if config.preserve and \
@@ -102,37 +138,10 @@ def do_search(config, testrun):
             if not os.path.exists(searchdumpdir):
                 os.mkdir(searchdumpdir)
 
-            # start search server
-            print("Starting search server")
-            dbpath = testrun.dbpath(config)
-            subp = subprocess.Popen(('/usr/bin/env', 'python',
-                                     '../src/start.py',
-                                     '--dbdir=%s' % os.path.dirname(dbpath),
-                                     '--log=%s' % serverlogfile,
-                                     ))
-            try:
-                time.sleep(2)
-
-                if len(extraargs) > 0 and not extraargs.endswith('&'):
-                    extraargs += '&'
-                searcher.run_query_file('127.0.0.1', 7080,
-                                        '/json/search?%s' % extraargs +
-                                        urllib.urlencode(
-                                            (
-                                             ('db', os.path.basename(dbpath)),
-                                            )
-                                        ) + '&query=',
-                                        queryfile, concurrency, searchlogfile,
-                                        searchdumpdir,
-                                        testrun.description,
-                                        runnum)
-
-            finally:
-                # stop search server
-                print("Stopping search server")
-                os.kill(subp.pid, 9)
-                subp.wait()
-                time.sleep(2)
+            print "Starting test run"
+            tests = searcher.QueryTests(queryfile, dbpath, searchlogfile, concurrency, **extraargs)
+            tests.run()
+            print "Ending test run"
 
 def analyse_index(config):
     alltimes = {}
@@ -165,10 +174,19 @@ def analyse_search(config):
                 outprefix = testrun.searchoutprefix(config, queryfile, concurrency, extraargs, runnum)
 
                 log = analyse_searchlogs.parse_logfile(searchlogpath)
-                analyse_searchlogs.generate_figures(log, outprefix,
-                                                    testrun.description + ", " +
-                                                    os.path.basename(queryfile) + ", " +
-                                                    "concurrency=%d" % concurrency)
+                title = testrun.description
+                title += ", " + os.path.basename(queryfile)
+                if concurrency != 1:
+                    title += ", concurrency=%d" % concurrency
+                for arg in extraargs:
+                    if arg == 'range':
+                        title += ", range=%s,%d,%d" % extraargs[arg]
+                    elif arg == 'gettags':
+                        title += ", gettags=%s,%d" % extraargs[arg]
+                    else:
+                        title += ", %s=%s" % (arg, extraargs[arg])
+
+                analyse_searchlogs.generate_figures(log, outprefix, title)
 
 
 class TestRun(object):
@@ -191,7 +209,7 @@ class TestRun(object):
         self.logspeed = logspeed
         self.queryruns = []
 
-    def add_query_run(self, queryfile, concurrency, extraargs=''):
+    def add_query_run(self, queryfile, concurrency, **extraargs):
         self.queryruns.append((os.path.abspath(queryfile), concurrency, extraargs))
 
     def maxdocs_pathbit(self):
@@ -227,36 +245,46 @@ class TestRun(object):
     def indexoutprefix(self, config):
         return os.path.join(config.outdir, 'index_%s_' % self._index_pathbit())
 
-    def searchlogpath(self, config, queryfile, concurrency, extraargs, runnum):
-        return os.path.join(config.outdir, 'searchlog_%s_query%s_mult%d_%s_%d.csv' %
-                            (self._index_pathbit(),
-                             self._filename_safe_path(os.path.basename(queryfile)),
-                             concurrency,
-                             self._filename_safe_path(extraargs),
-                             runnum))
+    def extraargs_pathbit(self, extraargs):
+        extraargs_list = list(extraargs.iteritems())
+        extraargs_list.sort()
+        extraargs = []
+        for key, val in extraargs_list:
+            extraargs.append(key + "_" + str(val))
 
-    def serverlogpath(self, config, queryfile, concurrency, extraargs, runnum):
-        return os.path.join(config.tmpdir, 'serverlog_%s_query%s_mult%d_%s_%d.csv' %
+        extraargs = '_'.join(extraargs)
+        extraargs = self._filename_safe_path(extraargs)
+        while extraargs.endswith('_'):
+            extraargs = extraargs[:-1]
+        if extraargs == '':
+            return ''
+        return "_" + extraargs
+
+    def queryfile_pathbit(self, queryfile):
+        return self._filename_safe_path(os.path.splitext(os.path.basename(queryfile))[0])
+
+    def searchlogpath(self, config, queryfile, concurrency, extraargs, runnum):
+        return os.path.join(config.outdir, 'searchlog_%s_%s_threads%d%s_run%d.csv' %
                             (self._index_pathbit(),
-                             self._filename_safe_path(os.path.basename(queryfile)),
+                             self.queryfile_pathbit(queryfile),
                              concurrency,
-                             self._filename_safe_path(extraargs),
+                             self.extraargs_pathbit(extraargs),
                              runnum))
 
     def searchoutprefix(self, config, queryfile, concurrency, extraargs, runnum):
-        return os.path.join(config.outdir, 'search_%s_query%s_mult%d_%s_%d_' %
+        return os.path.join(config.outdir, 'search_%s_%s_threads%d%s_run%d_' %
                             (self._index_pathbit(),
-                             self._filename_safe_path(os.path.basename(queryfile)),
+                             self.queryfile_pathbit(queryfile),
                              concurrency,
-                             self._filename_safe_path(extraargs),
+                             self.extraargs_pathbit(extraargs),
                              runnum))
 
     def searchdumpdir(self, config, queryfile, concurrency, extraargs, runnum):
-        return os.path.join(config.tmpdir, 'searchdump_%s_query%s_mult%d_%s_%d' %
+        return os.path.join(config.tmpdir, 'searchdump_%s_%s_threads%d%s_run%d' %
                             (self._index_pathbit(),
-                             self._filename_safe_path(os.path.basename(queryfile)),
+                             self.queryfile_pathbit(queryfile),
                              concurrency,
-                             self._filename_safe_path(extraargs),
+                             self.extraargs_pathbit(extraargs),
                              runnum))
 
 
@@ -288,14 +316,15 @@ if __name__ == '__main__':
     config.testruns.append(testrun)
 
     testrun = TestRun("sampledata/wikipedia.dump", "wikipedia", 1000000)
-    testrun.add_query_run("sampledata/productqueries.txt", 1)
-    testrun.add_query_run("sampledata/productqueries.txt", 10)
-    testrun.add_query_run("sampledata/productqueries.txt", 100)
+    testrun.add_query_run("sampledata/queries.txt", 1)
+    testrun.add_query_run("sampledata/queries.txt", 10)
+    testrun.add_query_run("sampledata/queries.txt", 100)
 
-    testrun.add_query_run("sampledata/productqueries.txt", 1, "sort=price")
-    testrun.add_query_run("sampledata/productqueries.txt", 1, "range=price,5,20")
-    testrun.add_query_run("sampledata/productqueries.txt", 1, "getfacets=10")
-    testrun.add_query_run("sampledata/productqueries.txt", 1, "gettags=tags,10")
+    testrun.add_query_run("sampledata/queries.txt", 1, sort="doclen")
+    testrun.add_query_run("sampledata/queries.txt", 1, collapse="doclen")
+    testrun.add_query_run("sampledata/queries.txt", 1, range=("doclen", 10000, 30000))
+    testrun.add_query_run("sampledata/queries.txt", 1, getfacets=10)
+    testrun.add_query_run("sampledata/queries.txt", 1, gettags=("tags",10))
     config.testruns.append(testrun)
 
     # Make directories (and ensure they're empty)
