@@ -22,19 +22,6 @@ import time
 import thread
 import threading
 import getopt
-
-def _setup_path():
-    """Set up sys.path to allow us to import Xappy when run uninstalled.
-
-    """
-    abspath = os.path.abspath(__file__)
-    dirname = os.path.dirname(abspath)
-    dirname, ourdir = os.path.split(dirname)
-    if os.path.exists(os.path.join(dirname, 'xappy')):
-        if ourdir == 'perftest':
-            sys.path.insert(0, dirname)
-
-_setup_path()
 import xappy
 
 class TestRunner(threading.Thread):
@@ -50,22 +37,31 @@ class TestRunner(threading.Thread):
                 querynum, query = self.tests.get_query()
                 query = query.strip()
                 querystart = time.time()
+
                 parsedquery = self.sconn.query_parse(query)
-                if self.tests.rangefield is not None:
-                    rangequery = self.sconn.query_range(self.tests.rangefield, self.tests.rangebegin, self.tests.rangeend)
+                if self.tests.range is not None:
+                    rangequery = self.sconn.query_range(*self.tests.range)
                     parsedquery = self.sconn.query_filter(parsedquery, rangequery)
+
+                search_getfacets = (self.tests.getfacets is not None)
+                search_gettags = None
+                if self.tests.gettags is not None:
+                    self.search_gettags = self.tests.gettags[0]
+
                 results = self.sconn.search(parsedquery, 0, 10,
                                             sortby=self.tests.sort,
-                                            collapse=self.tests.collapse)
-                self.tests.log_search(results.matches_estimated, querystart, self.num, query, parsedquery.get_length(), querynum)
+                                            collapse=self.tests.collapse,
+                                            getfacets=search_getfacets,
+                                            gettags=search_gettags)
+                self.tests.log_search(self.num, querynum, results.matches_estimated, querystart, parsedquery.get_length(), query)
         except StopIteration:
             return
 
 
 class QueryTests(object):
     def __init__(self, queryfile=None, dbdir=None, logfile=None, threads=1,
-                 rangefield=None, rangebegin=None, rangeend=None,
-                 sort=None, collapse=None):
+                 sort=None, collapse=None, range=None, getfacets=None,
+                 gettags=None):
         self.queryfile = queryfile
         self.dbdir = dbdir
         self.logfile = logfile
@@ -78,11 +74,11 @@ class QueryTests(object):
         self.starttime = time.time()
         self.threads = threads
 
-        self.rangefield = rangefield
-        self.rangebegin = rangebegin
-        self.rangeend = rangeend
         self.sort = sort
         self.collapse = collapse
+        self.range = range
+        self.getfacets = getfacets
+        self.gettags = gettags
 
         self.mutex = threading.Lock()
 
@@ -97,7 +93,7 @@ class QueryTests(object):
         finally:
             self.mutex.release()
 
-    def log_search(self, resultest, querystart, threadnum, query, querylen, querynum):
+    def log_search(self, threadnum, querynum, resultest, querystart, querylen, query):
         self.mutex.acquire()
         try:
             try:
@@ -123,56 +119,3 @@ class QueryTests(object):
             runner = TestRunner(self, i + 1)
             runner.start()
         runner.join()
-
-def usage(exitval):
-    print("Usage: search_speed.py [options] <queryfile> <dbdir> <logfile>")
-    print("Options are:")
-    print("  --threads=<threads>: set number of threads to use")
-    print("  --range=<field>,<begin>,<end>: filter results with a range")
-    print("  --sort=<field>: sort on a field")
-    print("  --collapse=<field>: collapse on a field")
-    sys.exit(exitval)
-
-def parse_argv(argv):
-    kwargs = {}
-    kwargs['queryfile'] = None
-    kwargs['dbdir'] = None
-    kwargs['logfile'] = None
-    kwargs['threads'] = 1
-    try:
-        optlist, args = getopt.gnu_getopt(argv, 'h', ('help', 'threads=', 'range=', 'sort=', 'collapse='))
-        for (opt, val) in optlist:
-            if opt == '-h' or opt == '--help':
-                usage(0)
-            elif opt == '--threads':
-                kwargs['threads'] = int(val)
-            elif opt == '--range':
-                field,begin,end = val.split(',')
-                kwargs['rangefield'] = field
-                kwargs['rangebegin'] = begin
-                kwargs['rangeend'] = end
-            elif opt == '--sort':
-                kwargs['sort'] = val
-            elif opt == '--collapse':
-                kwargs['collapse'] = val
-            else:
-                print("Unknown option %r" % opt)
-                usage(1)
-    except getopt.GetoptError, e:
-        print("Bad options: %r" % str(e))
-        usage(1)
-
-    if len(args) < 4 or len(args) > 5:
-        print("Wrong number of arguments")
-        usage(1)
-    kwargs['queryfile'] = args[1]
-    kwargs['dbdir'] = args[2]
-    kwargs['logfile'] = args[3]
-    if len(args) > 4:
-       kwargs['threads'] = int(args[4])
-
-    return kwargs
-
-if __name__ == '__main__':
-    tests = QueryTests(**parse_argv(sys.argv))
-    tests.run()
