@@ -1,3 +1,7 @@
+Tue Oct 09 01:21:38 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* perftest/: Sort out search side of performance tests.
+
 Mon Oct 08 23:46:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* perftest/: Tidy up, towards making automated performance tests
